--- a/src/views/layout/layout.ejs
+++ b/src/views/layout/layout.ejs
@@ -72,7 +72,7 @@
             <li class="nav-item"><a href="/admin/employees" class="nav-link"><i
                         class="bi bi-person-workspace me-2"></i> All Employees</a></li>      
         
-            <!-- ACCOUNT -->
+            <!-- account -->
             <li class="nav-item small text-uppercase text-muted px-2 mt-3">Account</li>
             <li class="nav-item"><a href="/profile" class="nav-link"><i
                   class="bi bi-person-circle me-2"></i> My Profile</a></li>
