Add missing script inclusion for appointments-drag.js in review.ejs

--- a/src/views/pages/appointments/review.ejs
+++ b/src/views/pages/appointments/review.ejs
@@ -139,3 +139,4 @@
 
 <%- include("../../partials/deleteModal") %>
 <script src="/js/appointments-review.js"></script>
+<script src="/js/appointments-drag.js"></script>
