--- a/src/views/layout/layout.ejs
+++ b/src/views/layout/layout.ejs
@@ -9,7 +9,8 @@
       <%- include('../partials/navigation') %>
     </div>
     <main>
-      <% if (typeof errors === 'undefined' && (messages.success_msg || messages.error_msg)) { %>
+      <% if (typeof errors==='undefined' && messages && (messages.success_msg ||
+        messages.error_msg)) { %>
         <div class="container mt-3">
           <div class="row justify-content-center">
             <div class="col-md-5">
