Update logout links to include '/auth' prefix for consistency across views

--- a/src/views/pages/index.ejs
+++ b/src/views/pages/index.ejs
@@ -28,7 +28,7 @@
                                             <%= user?.account_lastname %>
                                     </strong>
                                 </p>
-                                <a href="/logout" class="btn btn-outline-danger d-flex align-items-center">Logout</a>
+                                <a href="/auth/logout" class="btn btn-outline-danger d-flex align-items-center">Logout</a>
                             </div>
                     <% } %>
                 </p>
