--- a/src/views/layout/layout.ejs
+++ b/src/views/layout/layout.ejs
@@ -77,7 +77,7 @@
             <li class="nav-item small text-uppercase text-muted px-2 mt-3">Account</li>
             <li class="nav-item"><a href="/profile" class="nav-link"><i
                   class="bi bi-person-circle me-2"></i> My Profile</a></li>
-            <li class="nav-item mt-3"><a href="/logout" class="nav-link text-danger"><i
+            <li class="nav-item mt-3"><a href="/auth/logout" class="nav-link text-danger"><i
                   class="bi bi-box-arrow-right me-2"></i> Logout</a>
             </li>
           </ul>
