--- a/src/views/partials/navigation.ejs
+++ b/src/views/partials/navigation.ejs
@@ -39,7 +39,7 @@
                   </li>
                   <li><a class="dropdown-item" href="/profile">Profile  <i class="bi bi-gear me-2"></i></a></li>
             
-                  <li><a class="dropdown-item text-danger" href="/logout">Logout  <i class="bi bi-box-arrow-right me-2"></i></a></li>
+                  <li><a class="dropdown-item text-danger" href="/auth/logout">Logout  <i class="bi bi-box-arrow-right me-2"></i></a></li>
                 </ul>
               </div>
               <% } %>
