--- a/src/views/partials/sidebar.ejs
+++ b/src/views/partials/sidebar.ejs
@@ -72,7 +72,7 @@
             </li>
 
             <li class="nav-item mt-4">
-                <a href="/logout" class="nav-link text-danger">
+                <a href="/auth/logout" class="nav-link text-danger">
                     <i class="bi bi-box-arrow-right me-2"></i> Logout
                 </a>
             </li>
